--- a/dom-manipulation/exercises/3-update-list.html
+++ b/dom-manipulation/exercises/3-update-list.html
@@ -56,6 +56,8 @@
 
       <script id='DOM manipulation script'>
         // write me! (... without using cloneNode, that's kind of cheating)
+        //document.getElementById('modified').children[0].innerText[0] = 'a list of things robots solar systems oil';
+        document.getElementById('modified').children[1].children[0].innerText = 'robots';
       </script>
 
     </div>
