--- a/dom-manipulation/exercises/2-chage-link.html
+++ b/dom-manipulation/exercises/2-chage-link.html
@@ -42,6 +42,9 @@
 
       <script id='DOM manipulation script'>
         // write me! (... without using cloneNode, that's kind of cheating)
+        document.getElementById('modified').children[0].innerText = 'learn about badgers';
+        document.getElementById('modified').children[0].target = '_blank';
+        
       </script>
 
     </div>
