changehtml is done

--- a/dom-manipulation/exercises/1-change-text.html
+++ b/dom-manipulation/exercises/1-change-text.html
@@ -41,6 +41,9 @@
 
       <script id='DOM manipulation script'>
         // write me! (... without using cloneNode, that's kind of cheating)
+        const h1El = document.getElementById("modified").children[0];
+        h1El.innerHTML ="hi!";
+       
       </script>
 
     </div>
