--- a/dom-manipulation/exercises/2-chage-link.html
+++ b/dom-manipulation/exercises/2-chage-link.html
@@ -42,6 +42,10 @@
 
       <script id='DOM manipulation script'>
         // write me! (... without using cloneNode, that's kind of cheating)
+        a1El = document.getElementById("modified").children[0];
+        a1El.innerHTML = 'learn about badgers';
+        a1El.href = 'https://www.badgerbadgerbadger.com';
+        a1El.target = '_blank';
       </script>
 
     </div>
