--- a/dom-manipulation/exercises/1-change-text.html
+++ b/dom-manipulation/exercises/1-change-text.html
@@ -40,7 +40,7 @@
       </div>
 
       <script id='DOM manipulation script'>
-        // write me! (... without using cloneNode, that's kind of cheating)
+       document.getElementById('replicate-me').children[0].innerText = "bye!"; // write me! (... without using cloneNode, that's kind of cheating)
       </script>
 
     </div>
