--- a/dom-manipulation/exercises/3-update-list.html
+++ b/dom-manipulation/exercises/3-update-list.html
@@ -55,7 +55,7 @@
       </div>
 
       <script id='DOM manipulation script'>
-        // write me! (... without using cloneNode, that's kind of cheating)
+        document.getElementById("modified").children[1].children[0]="robots";// write me! (... without using cloneNode, that's kind of cheating)
       </script>
 
     </div>
